[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/objects/counter.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/TRlevels/TR_Testing.gd" type="Script" id=2]
[ext_resource path="res://src/objects/falling_coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tiles/maintileset.tres" type="TileSet" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1011.17, 32.4318 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 476.604, 10 )

[node name="testlv" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 1073741824, 0, 26, 1073741824, 0, 65536, 1073741824, 0, 65562, 1073741824, 0, 131072, 1073741824, 0, 131098, 1073741824, 0, 196608, 1073741824, 0, 196634, 1073741824, 0, 262144, 1073741824, 0, 262170, 1073741824, 0, 327680, 1073741824, 0, 327706, 1073741824, 0, 393216, 1073741824, 0, 393242, 1073741824, 0, 458752, 1073741824, 0, 458778, 1073741824, 0, 524288, 1073741824, 0, 524314, 1073741824, 0, 589824, 1073741824, 0, 589850, 1073741824, 0, 655360, 1073741824, 0, 655386, 1073741824, 0, 720896, 1073741824, 0, 720922, 1073741824, 0, 786432, 1073741824, 0, 786458, 1073741824, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 1073741824, 0 )

[node name="background" type="CanvasLayer" parent="."]
layer = -100

[node name="counter" parent="background" instance=ExtResource( 1 )]

[node name="Start" type="Position2D" parent="."]
position = Vector2( 852, 691 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 545, 671 )

[node name="ENDR" type="Position2D" parent="."]
position = Vector2( 1652.58, 118.068 )

[node name="coincleaner" type="Area2D" parent="."]
position = Vector2( 70.6312, 834.973 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="coincleaner"]
position = Vector2( 819.109, 20.1547 )
shape = SubResource( 1 )

[node name="coincleaner2" type="Area2D" parent="."]
position = Vector2( -238, 143 )
scale = Vector2( 0.16, 1 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="coincleaner2"]
position = Vector2( 819.109, 20.1547 )
shape = SubResource( 1 )

[node name="coinspawner" type="Area2D" parent="."]
position = Vector2( 45.9988, 162.971 )
scale = Vector2( 1.72, 1 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="coinspawner"]
position = Vector2( 466.604, 0 )
shape = SubResource( 2 )

[node name="falling_coin" parent="." instance=ExtResource( 3 )]
position = Vector2( 741.624, 93.2328 )

[connection signal="body_entered" from="coincleaner" to="." method="_on_coincleaner_body_entered"]
[connection signal="body_entered" from="coincleaner2" to="." method="_on_coincleaner_body_entered"]
[connection signal="body_entered" from="coinspawner" to="." method="_on_coinspawner_body_entered"]
